@@ -39,10 +39,8 @@
             </tr>
         </table>
         <wicket:enclosure child="untranslated-list">
-            <h3>
-                <wicket:message key="simulations.translated.untranslated">
-                    Untranslated Simulations
-                </wicket:message>
+            <h3 wicket:id="untranslated-header">
+                Simulations not yet translated into {0}
             </h3>
             <ul>
                 <li wicket:id="untranslated-list">
